--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -1,12 +1,13 @@
 CFLAGS = -g
 PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
-		03_swap_dlist_elements
+		03_swap_dlist_elements 04_intersect_list
 
 00_OBJ = 00_test_list.o list.o 
 01_OBJ = 01_print_list.o list.o
 02_OBJ = 02_print_lots.o list.o
 03_OBJ = 03_swap_list_elements.o list.o
 03_DOBJ = 03_swap_dlist_elements.o dlist.o
+04_OBJ = 04_intersect_list.o list.o
 
 all: $(PROGS)
 
@@ -24,6 +25,9 @@ all: $(PROGS)
 
 03_swap_dlist_elements: $(03_DOBJ)
 	cc $(CFLAGS) -o $@ $(03_DOBJ)
+
+04_intersect_list: $(04_OBJ)
+	cc $(CFLAGS) -o $@ $(04_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
