feature: solve problem 3.5 -- 05_union_list

--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -1,6 +1,6 @@
 CFLAGS = -g
 PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
-		03_swap_dlist_elements 04_intersect_list
+		03_swap_dlist_elements 04_intersect_list 05_union_list \
 
 00_OBJ = 00_test_list.o list.o 
 01_OBJ = 01_print_list.o list.o
@@ -8,6 +8,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 03_OBJ = 03_swap_list_elements.o list.o
 03_DOBJ = 03_swap_dlist_elements.o dlist.o
 04_OBJ = 04_intersect_list.o list.o
+05_OBJ = 05_union_list.o list.o
 
 all: $(PROGS)
 
@@ -28,6 +29,9 @@ all: $(PROGS)
 
 04_intersect_list: $(04_OBJ)
 	cc $(CFLAGS) -o $@ $(04_OBJ)
+
+05_union_list: $(05_OBJ)
+	cc $(CFLAGS) -o $@ $(05_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
