--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -1,6 +1,7 @@
 CFLAGS = -g
 PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		03_swap_dlist_elements 04_intersect_list 05_union_list \
+		06_add_polynomials
 
 00_OBJ = 00_test_list.o list.o 
 01_OBJ = 01_print_list.o list.o
@@ -9,6 +10,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 03_DOBJ = 03_swap_dlist_elements.o dlist.o
 04_OBJ = 04_intersect_list.o list.o
 05_OBJ = 05_union_list.o list.o
+06_OBJ = 06_add_polynomials.o list.o
 
 all: $(PROGS)
 
@@ -32,6 +34,9 @@ all: $(PROGS)
 
 05_union_list: $(05_OBJ)
 	cc $(CFLAGS) -o $@ $(05_OBJ)
+
+06_add_polynomials: $(06_OBJ)
+	cc $(CFLAGS) -o $@ $(06_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
