--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -2,17 +2,19 @@ CFLAGS = -g
 PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		03_swap_dlist_elements 04_intersect_list 05_union_list \
 		06_add_polynomials 07_multiply_polynomials 08_power_polynomials \
+		09_integer_arithmetic \
 
-00_OBJ = 00_test_list.o list.o 
-01_OBJ = 01_print_list.o list.o
-02_OBJ = 02_print_lots.o list.o
-03_OBJ = 03_swap_list_elements.o list.o
-03_DOBJ = 03_swap_dlist_elements.o dlist.o
-04_OBJ = 04_intersect_list.o list.o
-05_OBJ = 05_union_list.o list.o
-06_OBJ = 06_add_polynomials.o polynomial.o list.o
-07_OBJ = 07_multiply_polynomials.o polynomial.o list.o
-08_OBJ = 08_power_polynomials.o polynomial.o list.o
+00_OBJ = 00_test_list.o list.o utils.o
+01_OBJ = 01_print_list.o list.o utils.o
+02_OBJ = 02_print_lots.o list.o utils.o
+03_OBJ = 03_swap_list_elements.o list.o utils.o
+03_DOBJ = 03_swap_dlist_elements.o dlist.o utils.o
+04_OBJ = 04_intersect_list.o list.o utils.o
+05_OBJ = 05_union_list.o list.o utils.o
+06_OBJ = 06_add_polynomials.o polynomial.o list.o utils.o
+07_OBJ = 07_multiply_polynomials.o polynomial.o list.o utils.o
+08_OBJ = 08_power_polynomials.o polynomial.o list.o utils.o
+09_OBJ = 09_integer_arithmetic.o arithmetic.o polynomial.o list.o utils.o
 
 all: $(PROGS)
 
@@ -45,6 +47,9 @@ all: $(PROGS)
 
 08_power_polynomials: $(08_OBJ)
 	cc $(CFLAGS) -o $@ $(08_OBJ)
+
+09_integer_arithmetic: $(09_OBJ)
+	cc $(CFLAGS) -o $@ $(09_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
