--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -3,7 +3,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		03_swap_dlist_elements 04_intersect_list 05_union_list \
 		06_add_polynomials 07_multiply_polynomials 08_power_polynomials \
 		09_integer_arithmetic 10_josephus_problem 11_find_element \
-		12_reverse_list 13_sort_student_records \
+		12_reverse_list 13_sort_student_records 14_store_graph_with_list \
 
 00_OBJ = 00_test_list.o clist.o utils.o
 01_OBJ = 01_print_list.o list.o utils.o
@@ -20,6 +20,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 11_OBJ = 11_find_element.o list.o utils.o
 12_OBJ = 12_reverse_list.o list.o utils.o
 13_OBJ = 13_sort_student_records.o list.o utils.o
+14_OBJ = 14_store_graph_with_list.o list.o utils.o
 
 all: $(PROGS)
 
@@ -67,6 +68,9 @@ all: $(PROGS)
 
 13_sort_student_records: $(13_OBJ)
 	cc $(CFLAGS) -o $@ $(13_OBJ)
+
+14_store_graph_with_list: $(14_OBJ)
+	cc $(CFLAGS) -o $@ $(14_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
