--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -4,7 +4,8 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		06_add_polynomials 07_multiply_polynomials 08_power_polynomials \
 		09_integer_arithmetic 10_josephus_problem 11_find_element \
 		12_reverse_list 13_sort_student_records 14_store_graph_with_list \
-		00_test_cursor 14_store_graph_with_cursor \
+		00_test_cursor 14_store_graph_with_cursor 15_self_adjust_list_use_array \
+		15_self_adjust_list_use_linked
 
 00_OBJ = 00_test_list.o clist.o utils.o
 00_COBJ = 00_test_cursor.o cursor.o utils.o
@@ -24,6 +25,8 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 13_OBJ = 13_sort_student_records.o list.o utils.o
 14_OBJ = 14_store_graph_with_list.o list.o utils.o
 14_DOBJ = 14_store_graph_with_cursor.o cursor.o utils.o
+15_AOBJ = 15_self_adjust_list_use_array.o utils.o
+15_LOBJ = 15_self_adjust_list_use_linked.o list.o utils.o
 
 all: $(PROGS)
 
@@ -80,6 +83,12 @@ all: $(PROGS)
 
 14_store_graph_with_cursor: $(14_DOBJ)
 	cc $(CFLAGS) -o $@ $(14_DOBJ)
+
+15_self_adjust_list_use_array: $(15_AOBJ)
+	cc $(CFLAGS) -o $@ $(15_AOBJ)
+
+15_self_adjust_list_use_linked: $(15_LOBJ)
+	cc $(CFLAGS) -o $@ $(15_LOBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
