feature: solve problem 3.16 -- 16_list_unique

--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -5,7 +5,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		09_integer_arithmetic 10_josephus_problem 11_find_element \
 		12_reverse_list 13_sort_student_records 14_store_graph_with_list \
 		00_test_cursor 14_store_graph_with_cursor 15_self_adjust_list_use_array \
-		15_self_adjust_list_use_linked
+		15_self_adjust_list_use_linked 16_list_unique 16_list_unique_with_sort \
 
 00_OBJ = 00_test_list.o clist.o utils.o
 00_COBJ = 00_test_cursor.o cursor.o utils.o
@@ -27,6 +27,8 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 14_DOBJ = 14_store_graph_with_cursor.o cursor.o utils.o
 15_AOBJ = 15_self_adjust_list_use_array.o utils.o
 15_LOBJ = 15_self_adjust_list_use_linked.o list.o utils.o
+16_OBJ = 16_list_unique.o list.o utils.o
+16_SOBJ = 16_list_unique_with_sort.o list.o utils.o
 
 all: $(PROGS)
 
@@ -89,6 +91,12 @@ all: $(PROGS)
 
 15_self_adjust_list_use_linked: $(15_LOBJ)
 	cc $(CFLAGS) -o $@ $(15_LOBJ)
+
+16_list_unique: $(16_OBJ)
+	cc $(CFLAGS) -o $@ $(16_OBJ)
+
+16_list_unique_with_sort: $(16_SOBJ)
+	cc $(CFLAGS) -o $@ $(16_SOBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
