--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -6,6 +6,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		12_reverse_list 13_sort_student_records 14_store_graph_with_list \
 		00_test_cursor 14_store_graph_with_cursor 15_self_adjust_list_use_array \
 		15_self_adjust_list_use_linked 16_list_unique 16_list_unique_with_sort \
+		17_lazy_deletion_list
 
 00_OBJ = 00_test_list.o clist.o utils.o
 00_COBJ = 00_test_cursor.o cursor.o utils.o
@@ -29,6 +30,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 15_LOBJ = 15_self_adjust_list_use_linked.o list.o utils.o
 16_OBJ = 16_list_unique.o list.o utils.o
 16_SOBJ = 16_list_unique_with_sort.o list.o utils.o
+17_OBJ = 17_lazy_deletion_list.o lazy_list.o utils.o
 
 all: $(PROGS)
 
@@ -97,6 +99,9 @@ all: $(PROGS)
 
 16_list_unique_with_sort: $(16_SOBJ)
 	cc $(CFLAGS) -o $@ $(16_SOBJ)
+
+17_lazy_deletion_list: $(17_OBJ)
+	cc $(CFLAGS) -o $@ $(17_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
