feature: solve problem 3.20 part 3 -- 20_postfix_to_infix

--- a/03_list_stack_queue/Makefile
+++ b/03_list_stack_queue/Makefile
@@ -7,7 +7,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 		00_test_cursor 14_store_graph_with_cursor 15_self_adjust_list_use_array \
 		15_self_adjust_list_use_linked 16_list_unique 16_list_unique_with_sort \
 		17_lazy_deletion_list 00_test_stack 18_balance_symbols \
-		19_postfix_expression 20_infix_to_postfix \
+		19_postfix_expression 20_infix_to_postfix 20_postfix_to_infix \
 
 00_OBJ = 00_test_list.o clist.o utils.o
 00_COBJ = 00_test_cursor.o cursor.o utils.o
@@ -36,6 +36,7 @@ PROGS = 00_test_list 01_print_list 02_print_lots 03_swap_list_elements \
 18_OBJ = 18_balance_symbols.o stack.o utils.o
 19_OBJ = 19_postfix_expression.o stack.o utils.o
 20_OBJ = 20_infix_to_postfix.o stack.o utils.o
+20_POBJ = 20_postfix_to_infix.o dlist.o stack.o utils.o
 
 all: $(PROGS)
 
@@ -119,6 +120,9 @@ all: $(PROGS)
 
 20_infix_to_postfix: $(20_OBJ)
 	cc $(CFLAGS) -o $@ $(20_OBJ)
+
+20_postfix_to_infix: $(20_POBJ)
+	cc $(CFLAGS) -o $@ $(20_POBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
