feature: gives the implementation of deleting node of avl tree.

--- a/04_tree/Makefile
+++ b/04_tree/Makefile
@@ -1,6 +1,8 @@
 CFLAGS = -g
 PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
+		 00_test_avltree \
 
+00_AOBJ = 00_test_avltree.o avltree.o utils.o
 00_BOBJ = 00_test_bstree.o bstree.o utils.o
 00_SOBJ = 00_test_stack.o stack.o utils.o
 00_TOBJ = 00_transform_expr_order.o expr.o stack.o bstree.o utils.o
@@ -15,6 +17,9 @@ all: $(PROGS)
 
 00_test_bstree: $(00_BOBJ)
 	cc $(CFLAGS) -o $@ $(00_BOBJ)
+
+00_test_avltree: $(00_AOBJ)
+	cc $(CFLAGS) -o $@ $(00_AOBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
