feature: solve problem 4.29 -- generate an N-node binary search tree.

--- a/04_tree/Makefile
+++ b/04_tree/Makefile
@@ -2,6 +2,7 @@ CFLAGS = -g
 PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 		 00_test_avltree 00_test_sptree 11_test_cbstree \
 		 13_test_del_tree 19_insert_avl_nonrecur  27_count_tree_node \
+		 29_random_bstree \
 
 00_AOBJ = 00_test_avltree.o avltree.o stack.o utils.o
 00_BOBJ = 00_test_bstree.o bstree.o utils.o
@@ -12,6 +13,7 @@ PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 13_OBJ = 13_test_del_tree.o bstree.o utils.o
 19_OBJ = 19_insert_avl_nonrecur.o avltree.o stack.o utils.o
 27_OBJ = 27_count_tree_node.o bstree.o utils.o
+29_OBJ = 29_random_bstree.o bstree.o utils.o
 
 all: $(PROGS)
 
@@ -41,6 +43,9 @@ all: $(PROGS)
 
 27_count_tree_node: $(27_OBJ)
 	cc $(CFLAGS) -o $@ $(27_OBJ)
+
+29_random_bstree: $(29_OBJ)
+	cc $(CFLAGS) -o $@ $(29_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
