--- a/04_tree/Makefile
+++ b/04_tree/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g
 PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 		 00_test_avltree 00_test_sptree 11_test_cbstree \
 		 13_test_del_tree 19_insert_avl_nonrecur  27_count_tree_node \
-		 29_random_bstree 29_recur_random_bstree \
+		 29_random_bstree 29_recur_random_bstree 30_avltree_with_fewest_node \
 
 00_AOBJ = 00_test_avltree.o avltree.o stack.o utils.o
 00_BOBJ = 00_test_bstree.o bstree.o utils.o
@@ -15,6 +15,7 @@ PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 27_OBJ = 27_count_tree_node.o bstree.o utils.o
 29_OBJ = 29_random_bstree.o bstree.o utils.o
 29_ROBJ = 29_recur_random_bstree.o bstree.o utils.o
+30_OBJ = 30_avltree_with_fewest_node.o bstree.o utils.o
 
 all: $(PROGS)
 
@@ -50,6 +51,9 @@ all: $(PROGS)
 
 29_recur_random_bstree: $(29_ROBJ)
 	cc $(CFLAGS) -o $@ $(29_ROBJ)
+
+30_avltree_with_fewest_node: $(30_OBJ)
+	cc $(CFLAGS) -o $@ $(30_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
