refactor: copy the implementation of list and queue from 03_list_stack_queue to 04_tree and make some refactoring.

--- a/04_tree/Makefile
+++ b/04_tree/Makefile
@@ -1,5 +1,6 @@
 CFLAGS = -g
 PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
+		 00_test_list 00_test_queue \
 		 00_test_avltree 00_test_sptree 11_test_cbstree \
 		 13_test_del_tree 19_insert_avl_nonrecur  27_count_tree_node \
 		 29_random_bstree 29_recur_random_bstree 30_avltree_with_fewest_node \
@@ -7,7 +8,9 @@ PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 
 00_AOBJ = 00_test_avltree.o avltree.o stack.o utils.o
 00_BOBJ = 00_test_bstree.o bstree.o utils.o
+00_LOBJ = 00_test_list.o list.o utils.o
 00_POBJ = 00_test_sptree.o sptree.o utils.o
+00_QOBJ = 00_test_queue.o queue.o list.o utils.o
 00_SOBJ = 00_test_stack.o stack.o utils.o
 00_TOBJ = 00_transform_expr_order.o expr.o stack.o bstree.o utils.o
 11_OBJ = 11_test_cbstree.o cbstree.o utils.o 
@@ -28,6 +31,12 @@ all: $(PROGS)
 
 00_transform_expr_order: $(00_TOBJ)
 	cc $(CFLAGS) -o $@ $(00_TOBJ)
+
+00_test_list: $(00_LOBJ)
+	cc $(CFLAGS) -o $@ $(00_LOBJ)
+
+00_test_queue: $(00_QOBJ)
+	cc $(CFLAGS) -o $@ $(00_QOBJ)
 
 00_test_bstree: $(00_BOBJ)
 	cc $(CFLAGS) -o $@ $(00_BOBJ)
