feature: solve problem 4.44 -- find Kth tree's node.

--- a/04_tree/Makefile
+++ b/04_tree/Makefile
@@ -7,6 +7,7 @@ PROGS  = 00_test_stack 00_transform_expr_order 00_test_bstree \
 		 31_perfect_bstree 32_print_bounded_bstree 33_set_tree_coordinate \
 		 35_tree_level_order 37_test_btree 40_test_cstree \
      	 41_test_tree_similar 42_test_tree_isomorphic 43_tree_transform \
+		 44_find_Kth_tree_node \
 
 BS_OBJ  = bstree.o queue.o list.o utils.o
 BT_OBJ  = btree.o queue.o list.o utils.o
@@ -34,6 +35,7 @@ CS_OBJ  = cstree.o queue.o list.o utils.o
 41_OBJ = 41_test_tree_similar.o $(BS_OBJ)
 42_OBJ = 42_test_tree_isomorphic.o $(BS_OBJ)
 43_OBJ = 43_tree_transform.o $(BS_OBJ)
+44_OBJ = 44_find_Kth_tree_node.o $(BS_OBJ)
 
 all: $(PROGS)
 
@@ -105,6 +107,9 @@ all: $(PROGS)
 
 43_tree_transform: $(43_OBJ)
 	cc $(CFLAGS) -o $@ $(43_OBJ)
+
+44_find_Kth_tree_node: $(44_OBJ)
+	cc $(CFLAGS) -o $@ $(44_OBJ)
 
 clean:
 	rm -rf $(PROGS) *.o
